# rust-dex

./: .gitignore  Anchor.toml  CHANGE_CN.md  Cargo.toml  MAPPING_COMPARISON.md  README.md  STAKING_POOL_DESIGN.md  client-example.ts  package-lock.json  package.json  rustc-ice-2025-07-30T02_26_41-53939.txt
programs/rust-dex/: Cargo.toml
programs/rust-dex/src/: error.rs  lib.rs  map.rs  matching_engine.rs  order.rs  orderbook.rs  orderqueue.rs  sequencer.rs  utils.rs
programs/rust-dex/src/common/: constant.rs  error.rs  event.rs  mod.rs  utils.rs
programs/rust-dex/src/instructions/: cancel_order.rs  common.rs  consume_events.rs  deposit.rs  mod.rs  place_limit_order.rs  place_market_order.rs  register_token_pair.rs  register_user.rs  register_user_token_ledger.rs  register_vault_token_ledger.rs  withdraw.rs
programs/rust-dex/src/state/: dex_manager.rs  dict_tree_map.rs  event_list.rs  individual_ledger.rs  market.rs  mod.rs  order.rs  order_node.rs  orderbook.rs  orderheap.rs  orders.rs  token_pair.rs  vault_token_ledger.rs
tests/: cancel.test.ts  consume-events-rollback.test.ts  consume-events.test.ts  deposit.test.ts  end-to-end-complete.test.ts  end2end.test.ts  limit-order-cancel.test.ts  place-limit-order.test.ts  place-market-order.test.ts  place-order-normal.test.ts  place-order-rollback.test.ts  place-order-rollback.ts  register-token-pair.test.ts  register.test.ts  rust-dex.ts  staking-pool.ts  test-utils.ts  token.ts  transfer.test.ts  withdraw.test.ts
