[package]
name = "rust-dex"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]
name = "rust_dex"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
custom-heap = []
custom-panic = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bytemuck = "1.23.1"

